# STS_servos_pico

./: .clang-format  CMakeLists.txt  README.md  main.cpp  simple_is_moving.cpp  simple_moving.cpp  simple_velocity.cpp  uart.c  uart_rx_char.cpp  uart_rx_string.cpp
STSServoDriver/: STSServoDriver.cpp  STSServoDriver.hpp
examples/: simple_motion.cpp
extras/: README.md
src/: CMakeLists.txt  STSServoDriver.cpp  STSServoDriver.hpp
